fix z-index

--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -184,7 +184,7 @@ nav ul li a:hover ~ .nav-manage-sub{
     width:100px;
     padding:0;
     background:#5FA9DA;
-    z-index:100;
+    z-index:650;
     left:-999em;
     box-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
     -moz-shadow:-2px 3px 3px rgba(0, 0, 0, 0.4);
